--- a/src/templates/partials/proof-points.hbs
+++ b/src/templates/partials/proof-points.hbs
@@ -1,37 +1,33 @@
-{{!-- <h2 class="uppercase-underlined">Highlights</h2> --}}
+<section>
+    <div class="inner">
 
-<div class="grid proof-points">
-    <div class="grid-cell">
-        <div class="medium-grid-pad-1x">
-            <div class="proof-point">
-                <p class="proof-point__text">
-                <span class="proof-point__number">
-                    <span class="odometer" data-final-number="94">
-                    00
-                    </span>
-                    %
-                </span>
-                    <span class="proof-point__text_below">seniors who rank their Bethel education good or excellent</span>
-                </p>
+        <div class="grid">
+            <div class="grid-cell">
+                <div class="medium-grid-pad-1x">
+                    <div class="proofPoint">
+                        <p class="proofPoint__number">70%</p>
+                        <p>seniors who rank their Bethel education good or excellent</p>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-cell">
+                <div class="medium-grid-pad-1x">
+                    <div class="proofPoint">
+                        <p class="proofPoint__number">93%</p>
+                        <p>of recent grads are either employed or in graduate school</p>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-cell">
+                <div class="medium-grid-pad-1x">
+                    <div class="proofPoint">
+                            <p class="h5 ma0">of recent grads are either employed or in graduate school</p>
+                            <cite class="proofPoint__cite">- World News Report</cite>
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
+
     </div>
-    <div class="grid-cell">
-        <div class="medium-grid-pad-1x">
-            <div class="proof-point">
-                <p class="proof-point__text"><span class="proof-point__number"><span class="odometer" data-final-number="93">00</span>%</span>
-                    <span class="proof-point__text_below">of recent grads are either employed or in graduate school</span>
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="grid-cell">
-        <div class="medium-grid-pad-1x">
-            <div class="proof-point">
-                <p class="proof-point__text"><span class="proof-point__number"><span class="odometer" data-final-number="93">00</span>%</span>
-                    <span class="proof-point__text_below">of recent grads are either employed or in graduate school</span>
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
+</section>
