--- a/src/templates/partials/global__navigation.hbs
+++ b/src/templates/partials/global__navigation.hbs
@@ -4,19 +4,11 @@
     <nav class="global__navigation" role="navigation">
         <div class="inner">
             <ul>
-{{!--                 <li><a href="http://www.bethel.edu">
-                        <svg class="svg-icon  home-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home"></use></svg>
-                        <span style="display:none">Home</span>
-                    </a>
-                </li> --}}
-                 <li class="active"> <a href="http://www.bethel.edu/about">About</a></li>
-                 <li><a href="http://www.bethel.edu/academics/">Academics</a></li>
-                 <li><a href="http://www.bethel.edu/admissions/">Admissions</a></li>
-                 <li><a href="http://cas.bethel.edu/student-life/">Student Life</a></li>
-                 <li><a href="http://www.bethel.edu/faith/">Faith</a></li>
-                 <li><a href="http://athletics.bethel.edu/">Athletics</a></li>
-                 <li><a href="http://www.bethel.edu/alumni/">Alumni</a></li>
-                 <li><a href="http://www.bethel.edu/giving/">Giving</a></li>
+                 <li class="active"> <a href="http://www.bethel.edu/about">Offices</a></li>
+                 <li><a href="http://www.bethel.edu/academics/">News</a></li>
+                 <li><a href="http://www.bethel.edu/admissions/">Events</a></li>
+                 <li><a href="http://cas.bethel.edu/student-life/">Arts</a></li>
+                 <li><a href="http://www.bethel.edu/faith/">MyBethel</a></li>
             </ul>
         </div>
     </nav>
