--- a/src/templates/partials/global--school.hbs
+++ b/src/templates/partials/global--school.hbs
@@ -5,34 +5,40 @@
 
         <nav class="global__navigation" role="navigation">
             <ul>
-                 <li><a href="http://www.bethel.edu/academics/">Undergrad</a></li>
-                 <li><a href="http://www.bethel.edu/admissions/">Adult Undergrad</a></li>
-                 <li><a href="http://cas.bethel.edu/student-life/">Graduate</a></li>
-                 <li><a href="http://www.bethel.edu/faith/">Seminary</a></li>
-                 <li><a href="http://www.bethel.edu/faith/">Online</a></li>
+                     <li><a href="http://www.bethel.edu/academics/">About</a></li>
+                     <li><a class="active"  href="http://www.bethel.edu/admissions/">Admissions & Aid</a></li>
+                     <li><a href="http://cas.bethel.edu/student-life/">Academics</a></li>
+                     <li><a href="http://www.bethel.edu/faith/">Student Life</a></li>
+                     <li><a href="http://www.bethel.edu/faith/">Athletics</a></li>
+                     <li><a href="https://www.bethel.edu/academics/online">Giving</a></li>
             </ul>
         </nav>
 
         <div class="quick-links">
         <div class="quick-links left">
-            <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Academics</a></li>
-                <li><a href="#">Admissions</a></li>
-                <li><a href="#">Offices</a></li>
-                <li><a href="#">Events</a></li>
-            </ul>
+            {{!-- <ul>
+                 <li><a href="http://www.bethel.edu/about">Offices</a></li>
+                 <li><a href="http://www.bethel.edu/academics/">News</a></li>
+                 <li><a href="http://www.bethel.edu/admissions/">Events</a></li>
+                 <li><a href="http://cas.bethel.edu/student-life/">Arts</a></li>
+                 <li><a href="http://www.bethel.edu/faith/">MyBethel</a></li>
+            </ul> --}}
         </div>
 
        <div class="quick-links right">
            <ul>
-               <li><a href="#">Apply</a></li>
+               {{!-- <li><a href="#">Apply</a></li>
                <li><a href="#">Blink</a></li>
-               <li><a href="#">Giving</a></li>
+               <li><a href="#">Giving</a></li> --}}
+                                <li><a href="http://www.bethel.edu/about">Offices</a></li>
+                 <li><a href="http://www.bethel.edu/academics/">News</a></li>
+                 <li><a href="http://www.bethel.edu/admissions/">Events</a></li>
+                 <li><a href="http://cas.bethel.edu/student-life/">Arts</a></li>
+                 <li><a href="http://www.bethel.edu/faith/">MyBethel</a></li>
                <li><a class="btn  quick-links__search"><svg class="svg-icon  search-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#search"></use></svg> Search</a></li>
            </ul>
 
-{{!--            <form action="//www.bethel.edu/search/" class="search" id="cse-search-box" target="_blank">
+           {{!-- <form action="//www.bethel.edu/search/" class="search" id="xcse-search-box" target="_blank">
                <fieldset>
                    <input name="cx" type="hidden" value="017681067239267367526:chqo5ugqj90">
                    <input name="ie" type="hidden" value="UTF-8">
