--- a/src/templates/partials/global__header.hbs
+++ b/src/templates/partials/global__header.hbs
@@ -6,11 +6,12 @@
 
             <nav class="big-global__navigation" role="navigation">
                 <ul>
-                     <li><a href="http://www.bethel.edu/academics/">Undergrad</a></li>
-                     <li><a class="active"  href="http://www.bethel.edu/admissions/">Adult Undergrad</a></li>
-                     <li><a href="http://cas.bethel.edu/student-life/">Graduate</a></li>
-                     <li><a href="http://www.bethel.edu/faith/">Seminary</a></li>
-                     <li><a href="https://www.bethel.edu/academics/online">Online</a></li>
+                     <li><a href="http://www.bethel.edu/academics/">About</a></li>
+                     <li><a class="active"  href="http://www.bethel.edu/admissions/">Admissions & Aid</a></li>
+                     <li><a href="http://cas.bethel.edu/student-life/">Academics</a></li>
+                     <li><a href="http://www.bethel.edu/faith/">Student Life</a></li>
+                     <li><a href="http://www.bethel.edu/faith/">Athletics</a></li>
+                     <li><a href="https://www.bethel.edu/academics/online">Giving</a></li>
                 </ul>
             </nav>
 
