--- a/src/templates/pages/random.hbs
+++ b/src/templates/pages/random.hbs
@@ -1,5 +1,5 @@
 ---
-title: Admissions
+title: Random
 layout: default
 pageTitle: Admissions Routing
 ---
@@ -10,7 +10,9 @@ pageTitle: Admissions Routing
         <p class="breadcrumb"></p>
     </div>
 
-    {{> proof-points }}
+    <div class="main">
+        {{> news }}
+    </div>
 
     <div class="collapsible collapsible--generic">
         <h2 class="collapsible-heading" id="bethel-cccu-employee-scholarship" name="bethel-cccu-employee-scholarship">Bethel CCCU Employee Scholarship</h2>
