--- a/src/templates/partials/news.hbs
+++ b/src/templates/partials/news.hbs
@@ -1,88 +1,81 @@
-<div class="news">
-	<div class="news-feed-8585">
-		<h2>News</h2>
-
-	    <div class="news__item" itemscope="itemscope" itemtype="http://schema.org/NewsArticle">
-	    	<div class="news__image">
-		 		<a href="http://www.bethel.edu/news/articles/2014/december/faculty-excellence"><img src="https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/news/articles/2014/images/faculty-excellence.jpg" class="delayed-image-load image-replace" alt="Bethel’s College of Arts &amp; Sciences (CAS) has a nearly 30-year history of peer-recognition for its faculty members through the Faculty Excellence Awards. " data-src="https://cdn1.bethel.edu/resize/unsafe/{width}x0/smart/https://www.bethel.edu/news/articles/2014/images/faculty-excellence.jpg"></a>
-		 	</div>
-
-		 	<div class="news__content">
-			 	<p class="news__headline"><a href="http://www.bethel.edu/news/articles/2014/december/faculty-excellence"><span itemprop="headline">Faculty Recognized as Models of Excellence</span></a></p>
-			 	<p>December 03, 2014 | 10 a.m.</p>
-		 	</div>
-	    </div>
-
-	   	<div class="news__item" itemscope="itemscope" itemtype="http://schema.org/NewsArticle">
-	    	<div class="news__image">
-		 		<a href="http://www.bethel.edu/news/articles/2014/december/faculty-excellence"><img src="https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/news/articles/2014/images/faculty-excellence.jpg" class="delayed-image-load image-replace" alt="Bethel’s College of Arts &amp; Sciences (CAS) has a nearly 30-year history of peer-recognition for its faculty members through the Faculty Excellence Awards. " data-src="https://cdn1.bethel.edu/resize/unsafe/{width}x0/smart/https://www.bethel.edu/news/articles/2014/images/faculty-excellence.jpg"></a>
-		 	</div>
-
-		 	<div class="news__content">
-			 	<p class="news__headline"><a href="http://www.bethel.edu/news/articles/2014/december/faculty-excellence"><span itemprop="headline">Faculty Recognized as Models of Excellence</span></a></p>
-			 	<p>December 03, 2014 | 10 a.m.</p>
-		 	</div>
-	    </div>
-
-        <div class="news__item" itemscope="itemscope" itemtype="http://schema.org/NewsArticle">
-        	<div class="news__image">
-    	 		<a href="http://www.bethel.edu/news/articles/2014/december/faculty-excellence"><img src="https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/news/articles/2014/images/faculty-excellence.jpg" class="delayed-image-load image-replace" alt="Bethel’s College of Arts &amp; Sciences (CAS) has a nearly 30-year history of peer-recognition for its faculty members through the Faculty Excellence Awards. " data-src="https://cdn1.bethel.edu/resize/unsafe/{width}x0/smart/https://www.bethel.edu/news/articles/2014/images/faculty-excellence.jpg"></a>
-    	 	</div>
-
-    	 	<div class="news__content">
-    		 	<p class="news__headline"><a href="http://www.bethel.edu/news/articles/2014/december/faculty-excellence"><span itemprop="headline">Faculty Recognized as Models of Excellence</span></a></p>
-    		 	<p>December 03, 2014 | 10 a.m.</p>
-    	 	</div>
-        </div>
-                 
-{{!--                  <div itemscope="itemscope" itemtype="http://schema.org/NewsArticle">
-                 <div class="grid">
-                 <div class="grid-cell  u-x-large-1-1">
-                 <div class="grid-pad-1x">
-                 <a href="http://www.bethel.edu/news/articles/2014/september/great-lakes-grant">
-                 <img src="https://cdn1.bethel.edu/resize/unsafe/300x0/smart/https://www.bethel.edu/news/articles/2014/images/great-lakes-grant.jpg" class="delayed-image-load image-replace" alt="" data-src="https://cdn1.bethel.edu/resize/unsafe/{width}x0/smart/https://www.bethel.edu/news/articles/2014/images/great-lakes-grant.jpg">
-                 </a>
-                 </div>
-                 </div>
-                 <div class="grid-cell  u-x-large-1-1">
-                 <div class="grid-pad-1x">
-                 <h4>
-                 <a href="http://www.bethel.edu/news/articles/2014/september/great-lakes-grant">
-                 <span itemprop="headline">
-                 Bethel Awarded Internship Grant </span>
-                 </a>
-                 </h4>
-                 <p>
-                 September 26, 2014 | 8 a.m.</p>
-                 </div>
-                 </div>
-                 </div>
-                 </span>
-                 <div itemscope="itemscope" itemtype="http://schema.org/NewsArticle">
-                 <div class="grid">
-                 <div class="grid-cell  u-x-large-1-1">
-                 <div class="grid-pad-1x">
-                 <a href="http://www.bethel.edu/news/articles/2014/september/new-faculty">
-                 <img src="https://cdn3.bethel.edu/resize/unsafe/300x0/smart/https://www.bethel.edu/news/articles/2014/images/new-faculty.jpg" class="delayed-image-load image-replace" alt="Bethel University welcomes seven new full-time faculty members. In the College of Arts &amp; Sciences, four members were added to the full-time teaching staff for the 2014-2015 academic year." data-src="https://cdn3.bethel.edu/resize/unsafe/{width}x0/smart/https://www.bethel.edu/news/articles/2014/images/new-faculty.jpg">
-                 </a>
-                 </div>
-                 </div>
-                 <div class="grid-cell  u-x-large-1-1">
-                 <div class="grid-pad-1x">
-                 <h4>
-                 <a href="http://www.bethel.edu/news/articles/2014/september/new-faculty">
-                 <span itemprop="headline">
-                 New Faculty for 2014-2015</span>
-                 </a>
-                 </h4>
-                 <p>
-                 September 05, 2014 | 10:34 a.m.</p>
-                 </div>
-                 </div>
-                 </div>
-                 </span> --}}
-
-                         
+<div class="news__item" itemscope="itemscope" itemtype="https://schema.org/NewsArticle">
+    <div class="news__image">
+        <a href="https://www.bethel.edu/news/articles/2018/august/melia-cerrato">
+            <img class="lazyload" data-sizes="auto" data-srcset="
+            https://cdn1.bethel.edu/resize/unsafe/200x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/melia-peacecorps.jpg  200w,
+            https://cdn1.bethel.edu/resize/unsafe/300x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/melia-peacecorps.jpg  300w,
+            https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/melia-peacecorps.jpg  400w,
+            https://cdn1.bethel.edu/resize/unsafe/500x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/melia-peacecorps.jpg  500w,
+            https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/melia-peacecorps.jpg  600w,
+            https://cdn1.bethel.edu/resize/unsafe/700x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/melia-peacecorps.jpg  700w,
+            https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/melia-peacecorps.jpg  800w" alt="Melia Cerrato ’09 Embodies Servant Leadership" >
+        </a>
     </div>
+    <div class="news__content">
+        <h4 class="mt0"><a href="https://www.bethel.edu/news/articles/2018/august/melia-cerrato"><span itemprop="headline">Servant Leadership</span></a></h4>
+        <p>From Bethel to New Orleans to Ecuador and now law school, Melia Cerrato ’09 follows her passion for serving diverse communities. </p>
+        <p class="news__date">August 29, 2018 | 3:30 p.m.</p>
+    </div>
+</div>
 
+<div class="news__item" itemscope="itemscope" itemtype="https://schema.org/NewsArticle">
+    <div class="news__image">    
+        <a href="https://www.bethel.edu/news/articles/2018/august/campus-construction">
+            <img class="lazyload" data-sizes="auto" data-srcset="https://cdn3.bethel.edu/resize/unsafe/400x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/financial-markets-lab.jpg" alt="Summer Construction Brings a Fresh Look to Bethel Drive and Interior Spaces" src="https://cdn3.bethel.edu/resize/unsafe/400x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/financial-markets-lab.jpg">
+        </a>
+    </div>
+    <div class="news__content">
+        <h4 class="mt0"><a href="https://www.bethel.edu/news/articles/2018/august/campus-construction"><span itemprop="headline">Summer Construction Brings a Fresh Look to Bethel Drive and Interior Spaces</span></a></h4>
+        <p>Summer means one thing in Minnesota: construction. Bethel’s campus is no exception. Here’s what to look for as students return this fall. </p>
+        
+        <p><small>August 24, 2018 | Noon</small></p>
+    </div>
+</div>
+
+
+<div class="news__item" itemscope="itemscope" itemtype="https://schema.org/NewsArticle">
+    <div class="news__image">
+        <a href="https://www.bethel.edu/news/articles/2018/august/new-faculty">
+            <img class=" lazyload" data-src="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/new-faculty.jpg"
+                alt="New College of Arts &amp; Sciences Professors Start this Fall" src="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/new-faculty.jpg">
+
+        </a>
+    </div>
+    <div class="news__content">
+        <p class="news__headline"><a href="https://www.bethel.edu/news/articles/2018/august/new-faculty"><span itemprop="headline">New
+                    College of Arts &amp; Sciences Professors Start this Fall</span></a></p>
+        <p>August 24, 2018 | 11 a.m.</p>
+        <p>Bethel welcomes eight new professors to the community. </p>
+    </div>
+</div>
+<div class="news__item" itemscope="itemscope" itemtype="https://schema.org/NewsArticle">
+    <div class="news__image">
+        <a href="https://www.bethel.edu/news/articles/2018/august/harley-schreck-retires">
+            <img class=" lazyload" data-src="https://cdn3.bethel.edu/resize/unsafe/400x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/harley-schreck.jpg"
+                alt="Harley Schreck Retires from the College of Arts &amp; Sciences" src="https://cdn3.bethel.edu/resize/unsafe/400x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/harley-schreck.jpg">
+
+        </a>
+    </div>
+    <div class="news__content">
+        <p class="news__headline"><a href="https://www.bethel.edu/news/articles/2018/august/harley-schreck-retires"><span
+                    itemprop="headline">Harley Schreck Retires from the College of Arts &amp; Sciences</span></a></p>
+        <p>August 21, 2018 | 5 p.m.</p>
+        <p>After 30 years at Bethel University, Professor of Anthropology Harley Schreck has retired.</p>
+    </div>
+</div>
+<div class="news__item" itemscope="itemscope" itemtype="https://schema.org/NewsArticle">
+    <div class="news__image">
+        <a href="https://www.bethel.edu/news/articles/2018/august/michelle-davenport">
+            <img class=" lazyload" data-src="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/michelle-davenport.jpg"
+                alt="Michelle Davenport CAPS’12, GS’15 named CAPS/GS Alumna of the Year" src="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://thumbor.bethel.edu/news/articles/2018/images/michelle-davenport.jpg">
+
+        </a>
+    </div>
+    <div class="news__content">
+        <p class="news__headline"><a href="https://www.bethel.edu/news/articles/2018/august/michelle-davenport"><span
+                    itemprop="headline">Michelle Davenport CAPS’12, GS’15 named CAPS/GS Alumna of the Year</span></a></p>
+        <p>August 16, 2018 | 11 a.m.</p>
+        <p>Michelle Davenport overcame years of abuse and health challenges to follow her dream of helping others and
+            furthering herself through education, but she credits her success to the woman who raised her. </p>
+    </div>
 </div>
