--- a/src/css/global/navigation.css
+++ b/src/css/global/navigation.css
@@ -1,65 +1,31 @@
-.big-global__navigation {
-    display: none;
-
-    @mixin respond-min $large {
-        display: block;
-    }
-
-    li {
-        margin: 0;
-
-        @mixin respond-min $large {
-            font-family: $gotham;
-            display: inline-block;
-            font-weight: 500;
-            padding: 0;
-        }
-
-        @mixin respond-min $medium {
-            font-size: .9em;
-        }
-
-        @mixin respond-min $x-large {
-            font-size: 1em;
-        }
-    }
-
-    a {
-        color: #fff;
-        padding: .35em .5em;
-        position: relative;
-        margin-right: 0;
-        margin-left: 0;
-
-        @mixin respond-min 46em {
-            padding: .35em .75em;
-        }
-    }
-
-    a.active {
-        color: $bethel--yellow;
-    }
-}
-
 .global__navigation {
     display: block;
 
     @mixin respond-min $large {
-        display: none;
+        /* display: none; */
     }
 
     ul {
         list-style: none;
-        margin: 4em 0 0;
-        padding: 1em 0;
-    }
-
-    ul li {
-        font-size: .9rem;
+        padding: 0;
         font-weight: 500;
-        letter-spacing: .05em;
-        text-transform: uppercase;
-        padding: 0 0 .5em;
+    
+        @mixin respond-min $large {
+            display: flex;
+            justify-content: flex-start;
+            padding-right: 1.5em;
+            margin: .8em .4em;
+            /* margin-left: .4em; */
+        }
+    }
+    
+    ul li{
+        /* padding-right: 1.5em; */
+        /* padding-bottom: .5em; */
+
+        @mixin respond-min $large {
+            /* padding-bottom: 0; */
+        }
     }
 
     ul li a {
@@ -67,8 +33,7 @@
     }
 
     a:hover {
-        background: lighten(#133868, 10%);
-        border-radius: .5em;
+        text-decoration: none;
     }
 
     .svg-icon {
@@ -77,39 +42,109 @@
         vertical-align: text-top;
         fill: #fff;
     }
+
+    @mixin respond-min $large {
+        li {
+            display: block;
+            /* /* float: left; */
+            padding: .75rem 1rem .65rem;
+            position: relative;
+            /* text-decoration: none;
+            transition-duration: 0.5s; */
+        }
+        
+        li:hover,
+        li:focus-within {
+            background: $bethel--blue;
+            cursor: pointer;
+            border-radius: .2rem;
+        }
+        
+        li:focus-within a {
+            outline: none;
+        }
+        
+        ul.dropdown {
+            /* background: orange; */
+            background: $bethel--yellow;
+            background: $bethel--blue;
+            border-top: 1px solid $bethel--navy;
+            visibility: hidden;
+            opacity: 0;
+            min-width: 15rem;
+            position: absolute;
+            transition: all 0.5s ease;
+            margin-top: .75rem;
+            left: 0;
+            display: none;
+            margin-left: 0;
+            font-size: .8rem;
+            padding: 1.5em;
+        }
+
+        ul.dropdown li:hover {
+            background: none;
+            text-decoration: underline;
+        }
+        
+        ul li:hover > ul.dropdown,
+        ul li:focus-within > ul.dropdown,
+        ul li ul.dropdown:hover,
+        ul li ul.dropdown:focus {
+            visibility: visible;
+            opacity: 1;
+            display: block;
+            z-index: 100;
+        }
+        
+        ul li ul.dropdown li {
+            clear: both;
+            width: 100%;
+            padding: .5em;
+            font-weight: normal;
+        }
+
+        ul.dropdown li a {
+            /* color: $bethel--yellow; */
+        }
+    }
 }
 
 .quick-links {
     @mixin respond-min $large {
         display: flex;
         justify-content: space-between;
-        align-items: center;
-    }
+        background: $bethel--navy;
+    }   
 }
 
 .quick-links ul {
-    margin-bottom: 1em;
+    padding: 0;
     list-style: none;
     font-size: .8rem;
-    margin-top: 0;
-    padding: 0;
 
     @mixin respond-min $large {
-        margin-bottom: 0;
+        padding: 0 1em;
+        margin: .75em 0; 
     }
 }
 
 .quick-links ul li {
-    padding: .2em 0em;
+    padding: .2em 0;
 
     @mixin respond-min $large {
         display: inline-block;
-        padding: .2em .4em;
+        padding: .2em .5em;
     }
 }
 
-.quick-links li a {
+.quick-links a {
     color: #ccc;
+}
+
+a.quick-links__my {
+    padding-right: 1.5em;
+    border-right: 1px solid #777;
 }
 
 .quick-links__search {
