--- a/src/templates/partials/global--school.hbs
+++ b/src/templates/partials/global--school.hbs
@@ -1,54 +1,57 @@
 <div class="global__toolbox" id="toolbox">
-    <div class="inner">
+    <div class="inner global__toolboxGrid">
+
+        <a class="global__logo" href="http://www.bethel.edu"><img alt="Bethel University" src="https://www.bethel.edu/cdn/images/logo.png"/></a>
 
         <a class="mt1  global__toolbox__close-btn  btn  btn-small" id="js-globalNav-button--close" href="#top">✖ close</a>
 
-        <nav class="global__navigation" role="navigation">
-            <ul>
-                     <li><a href="http://www.bethel.edu/academics/">About</a></li>
-                     <li><a class="active"  href="http://www.bethel.edu/admissions/">Admissions & Aid</a></li>
-                     <li><a href="http://cas.bethel.edu/student-life/">Academics</a></li>
-                     <li><a href="http://www.bethel.edu/faith/">Student Life</a></li>
-                     <li><a href="http://www.bethel.edu/faith/">Athletics</a></li>
-                     <li><a href="https://www.bethel.edu/academics/online">Giving</a></li>
-            </ul>
-        </nav>
+        <div class="nav__holder">
+            <nav class="global__navigation" role="navigation">
+                <ul>
+                    <li><a href="http://www.bethel.edu/academics/">About</a></li>
+                    <li><a href="#" aria-haspopup="true">Admissions &amp; Tuition</a>
+                        <ul class="dropdown" aria-label="submenu">
+                            <li><a href="#">Undergrad</a></li>
+                            <li><a href="#">Graduate</a></li>
+                            <li><a href="#">Adult Undergrad</a></li>
+                            <li><a href="#">Seminary</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#" aria-haspopup="true">Academics</a>
+                        <ul class="dropdown" aria-label="submenu">
+                            <li><a href="#">Undergrad</a></li>
+                            <li><a href="#">Graduate</a></li>
+                            <li><a href="#">Adult Undergrad</a></li>
+                            <li><a href="#">Seminary</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="http://www.bethel.edu/faith/">Student Life</a></li>
+                    <li><a href="http://www.bethel.edu/faith/">Athletics</a></li>
+                    <li><a href="https://www.bethel.edu/academics/online">Faith</a></li>
+                </ul>
+            </nav>
 
-        <div class="quick-links">
-        <div class="quick-links left">
-            {{!-- <ul>
-                 <li><a href="http://www.bethel.edu/about">Offices</a></li>
-                 <li><a href="http://www.bethel.edu/academics/">News</a></li>
-                 <li><a href="http://www.bethel.edu/admissions/">Events</a></li>
-                 <li><a href="http://cas.bethel.edu/student-life/">Arts</a></li>
-                 <li><a href="http://www.bethel.edu/faith/">MyBethel</a></li>
-            </ul> --}}
+            <div class="quick-links">
+                <div class="quick-links left">
+                    <ul>
+                        <li><a class="quick-links__my"href="http://www.bethel.edu/faith/">MyBethel</a></li>
+                        <li><a href="http://www.bethel.edu/about">Offices</a></li>
+                        <li><a href="http://www.bethel.edu/academics/">News</a></li>
+                        <li><a href="http://www.bethel.edu/admissions/">Events</a></li>
+                    </ul>
+                </div>
+
+                <div class="quick-links right">
+                    <ul>
+                        <li><a href="#">Apply</a></li>
+                        <li><a href="#">Visit</a></li>
+                        <li><a href="#">Give</a></li>
+                        <li><a href="#">🔎</a></li>
+                        {{!-- <li><a class="btn  quick-links__search"><svg class="svg-icon  search-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#search"></use></svg> Search</a></li> --}}
+                    </ul>
+                </div>
+            </div>
         </div>
 
-       <div class="quick-links right">
-           <ul>
-               {{!-- <li><a href="#">Apply</a></li>
-               <li><a href="#">Blink</a></li>
-               <li><a href="#">Giving</a></li> --}}
-                                <li><a href="http://www.bethel.edu/about">Offices</a></li>
-                 <li><a href="http://www.bethel.edu/academics/">News</a></li>
-                 <li><a href="http://www.bethel.edu/admissions/">Events</a></li>
-                 <li><a href="http://cas.bethel.edu/student-life/">Arts</a></li>
-                 <li><a href="http://www.bethel.edu/faith/">MyBethel</a></li>
-               <li><a class="btn  quick-links__search"><svg class="svg-icon  search-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#search"></use></svg> Search</a></li>
-           </ul>
-
-           {{!-- <form action="//www.bethel.edu/search/" class="search" id="xcse-search-box" target="_blank">
-               <fieldset>
-                   <input name="cx" type="hidden" value="017681067239267367526:chqo5ugqj90">
-                   <input name="ie" type="hidden" value="UTF-8">
-                   <input class="search-input" name="q" type="text">
-                   <input class="btn search-go" name="sa" type="submit" value="Search">
-               </fieldset>
-           </form> --}}
-       </div>
-       </div>
-
-                {{!-- <svg class="svg-icon  search-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#search"></use></svg> --}}
     </div> 
 </div>
