--- a/src/templates/partials/global--school.hbs
+++ b/src/templates/partials/global--school.hbs
@@ -9,7 +9,7 @@
             <nav class="global__navigation" role="navigation">
                 <ul>
                     <li><a href="http://www.bethel.edu/academics/">About</a></li>
-                    <li><a href="#" aria-haspopup="true">Admissions &amp; Tuition</a>
+                    <li><a href="#" aria-haspopup="true">Admissions &amp; Aid</a>
                         <ul class="dropdown" aria-label="submenu">
                             <li><a href="#">Undergrad</a></li>
                             <li><a href="#">Graduate</a></li>
@@ -46,7 +46,13 @@
                         <li><a href="#">Apply</a></li>
                         <li><a href="#">Visit</a></li>
                         <li><a href="#">Give</a></li>
-                        <li><a href="#">🔎</a></li>
+                        <li><a href="#">
+                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="12" height="12" viewBox="0 0 32 32">
+                                <title>Search</title>
+                                <desc>Search icon</desc>
+                                <path d="M31.008 27.231l-7.58-6.447c-0.784-0.705-1.622-1.029-2.299-0.998 1.789-2.096 2.87-4.815 2.87-7.787 0-6.627-5.373-12-12-12s-12 5.373-12 12c0 6.627 5.373 12 12 12 2.972 0 5.691-1.081 7.787-2.87-0.031 0.677 0.293 1.515 0.998 2.299l6.447 7.58c1.104 1.226 2.907 1.33 4.007 0.23s0.997-2.903-0.23-4.007zM12 20c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z" fill="#cccccc"></path>
+                            </svg>
+                        </a></li>
                         {{!-- <li><a class="btn  quick-links__search"><svg class="svg-icon  search-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#search"></use></svg> Search</a></li> --}}
                     </ul>
                 </div>
