--- a/src/css/global/off-canvas--global.css
+++ b/src/css/global/off-canvas--global.css
@@ -5,7 +5,6 @@
 }
 
 .global__toolbox {
-  /* background: $bethel--navy; */
   background-color: #123563;
 
   @mixin respond-min $large {
@@ -18,10 +17,15 @@
 
     @mixin respond-min $large {
         display: grid;
-        grid-template-columns: 200px auto;
-        grid-gap: 3em;
+        /* grid-template-columns: 200px auto; */
+        grid-template-columns: minmax(150px, 210px) minmax(700px, auto);
+        grid-gap: 2em;
         align-items: center;
         overflow: visible;
+    }
+
+    @mixin respond-min $x-large {
+        grid-gap: 3em;
     }
 }
 
@@ -29,17 +33,6 @@
     display: none;
     @mixin respond-min $large {
         display: block;
-    }
-}
-
-.global__navigation {
-    /* display: grid; */
-    grid-row: 2/3;
-}
-
-.nav__holder {
-    @mixin respond-min $large {
-        display: grid;
     }
 }
 
