--- a/src/templates/partials/head.hbs
+++ b/src/templates/partials/head.hbs
@@ -15,6 +15,7 @@
     <link href="https://www.bethel.edu/cdn/images/favicon.ico" rel="icon" type="image/x-icon"/> 
 
     <link rel="stylesheet" type="text/css" href="css/quatro.css">
+    <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/6664852/665108/css/fonts.css" />
 
     {{!-- polyfill - picture element for ie11 --}}
     <script defer async src="https://cdn.polyfill.io/v2/polyfill.min.js?features=HTMLPictureElement&flags=gated"></script>
