--- a/src/css/global/global__navigation.css
+++ b/src/css/global/global__navigation.css
@@ -1,14 +1,16 @@
 .nav__holder {
     margin-top: 2em;
+    grid-column: 2/3;
   
     @mixin respond-min $large {
-        display: grid;
+        display: flex;
+        flex-direction: column;
         margin-top: 0;
     }
 }
 
 .global__navigation {
-    grid-row: 2/3;
+    order: 2;
 
     ul {
         list-style-type: none;
@@ -126,6 +128,7 @@
 
 .quick-links {
     @mixin respond-min $large {
+        order: 1;
         display: flex;
         justify-content: space-between;
         background: $bethel--navy;
