--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -17,7 +17,7 @@
 		{{> global__footer }}
 	</div>
 
-	<script>
+	{{!-- <script>
 		var cb = function() {
 			var l = document.createElement('link'); l.rel = 'stylesheet';
 			l.href = 'https://cloud.typography.com/6664852/665108/css/fonts.css';
@@ -27,6 +27,6 @@
 		webkitRequestAnimationFrame || msRequestAnimationFrame;
 		if (raf) raf(cb);
 		else window.addEventListener('load', cb);
-	</script>
+	</script> --}}
 </body>
 </html>
