changing to Gotham SSm

--- a/src/css/base/variables.css
+++ b/src/css/base/variables.css
@@ -17,7 +17,7 @@ $bethel--navy--rgb: 15, 44, 82;
 $bethel--yellow: #ffc600;
 $bethel--yellow--rgb: 255, 198, 0;
 
-$gotham: "Gotham A", "Gotham B", Helvetica, Arial, sans;
+$gotham: "Gotham SSm A", "Gotham SSm B", Helvetica, Arial, sans;
 
 $baseLineHeight: 1.5;
 $baseFontSize: 16px;
