--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -6,7 +6,7 @@
 <body class="no-js" id="top">
 <script type="text/javascript">document.body.className = document.body.className.replace("no-js","js");</script>
 
-	{{> global--school}}
+	{{> global__navigation }}
 
 	<div class="inner-wrap--global__navigation" id="js-inner-wrap--global__navigation">
 		{{> mobile__header }}
@@ -17,7 +17,7 @@
 		{{> global__footer }}
 	</div>
 
-	{{!-- <script>
+	<script>
 		var cb = function() {
 			var l = document.createElement('link'); l.rel = 'stylesheet';
 			l.href = 'https://cloud.typography.com/6664852/665108/css/fonts.css';
@@ -27,6 +27,6 @@
 		webkitRequestAnimationFrame || msRequestAnimationFrame;
 		if (raf) raf(cb);
 		else window.addEventListener('load', cb);
-	</script> --}}
+	</script>
 </body>
 </html>
