--- a/src/css/global/global__navigation.css
+++ b/src/css/global/global__navigation.css
@@ -11,6 +11,12 @@
 
 .global__navigation {
     order: 2;
+    font-size: .9rem;
+    
+
+    @mixin respond-min 1100px {
+        font-size: 1rem;
+    }
 
     ul {
         list-style-type: none;
@@ -21,27 +27,26 @@
             display: flex;
             justify-content: flex-start;
             /* padding-right: 1.5em; */
-            margin: .8em .4em;
+            margin: .8em .4em 0em .4em;
         }
     }
     
     ul li {
-        padding-bottom: .35em;
+        /* padding-bottom: .35em; */
     }
 
     @mixin respond-min $large {
         li {
-            display: block;
+            display: flex;
             position: relative;
-            padding: .5em 0;
-            /* transition-duration: 0.25s; */
+            border-bottom: .5em solid $bethel--navy;
         }
 
         li:hover,
         li:focus-within {
-            background: $bethel--blue;
             cursor: pointer;
-            /* border-radius: .2rem; */
+            border-bottom: .5em solid $bethel--yellow;
+            transition: border 250ms ease;
         }
         
         li:focus-within a {
@@ -53,13 +58,12 @@
         color: #fff;
 
         @mixin respond-min $large {
-            padding: .75rem 1rem .65rem;
+            padding: .75rem 1rem;
         }
     }
 
     a:hover {
-        background: $bethel--blue;
-
+        
         @mixin respond-min $large {
             text-decoration: none;
         }
@@ -73,29 +77,39 @@
     }
 
     ul.dropdown {
-        display: none;
+        @mixin respond-max $small {
+            display: none;
+        }
     }
 
+    @mixin respond-min $large {   
 
-    @mixin respond-min $large {        
         ul.dropdown {
             background: #fff;
-            border: 1px solid $bethel--blue;
+            background: #fff4d0;
+            border: 2px solid $bethel--yellow;
             visibility: hidden;
             opacity: 0;
             min-width: 15rem;
             position: absolute;
-            transition: all 0.5s ease;
-            margin-top: .5rem;
+            transition: all 250ms ease;
+            margin-top: 0;
+            top: 3.25rem;
             left: 0;
             margin-left: 0;
             font-size: .9rem;
             padding: 1.5em;
+            pointer-events: none;
+
+            @mixin respond-min 1100px {
+                top: 3.5rem;
+            }
         }
 
+
         ul.dropdown li:hover {
-            background: none;
-            text-decoration: underline;
+            background: $bethel--yellow;
+            transition: background 500ms ease;
         }
         
         ul li:hover > ul.dropdown,
@@ -106,6 +120,8 @@
             opacity: 1;
             display: block;
             z-index: 100;
+            /* transition: all 500ms ease; */
+            pointer-events: all;
         }
         
         ul li ul.dropdown li {
@@ -113,15 +129,17 @@
             width: 100%;
             padding: .5em;
             /* font-weight: normal; */
+            border-bottom: none;
         }
 
         ul.dropdown li a {
             color: $bethel--blue;
+            border: 0;
             padding: 0;
         }
 
         ul.dropdown li a:hover {
-            background: none;
+            /* background: white; */
         }
     }
 }
@@ -167,15 +185,5 @@ a.quick-links__my {
     @mixin respond-min $large {
         padding-right: 1.5em;
         border-right: 1px solid #777;
-    }
-}
-
-.quick-links__search {
-    margin-top: 1em !important;
-    font-weight: 500;
-    color: #fff !important;
-
-    @mixin respond-min $large {
-        margin: .5em 0 !important;
     }
 }
